Fixed footer not covering bottom of page...
1. In very small screen sizes
2. In Safari

--- a/RRS/base/static/less/sticky-footer-navbar.less
+++ b/RRS/base/static/less/sticky-footer-navbar.less
@@ -9,7 +9,7 @@ html {
 .footer {
   width: 100%;
   /* Set the fixed height of the footer here */
-  height: @footer-height;
+  min-height: @footer-height;
   background-color: #f5f5f5;
 }
 
